<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ==================== Maven Central 发布坐标 ==================== -->
    <groupId>io.github.cindifind</groupId>
    <artifactId>napcat-jni-sdk</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>NapCat JNI SDK</name>
    <description>Java SDK for NapCat Java Plugin Bridge - 通过子进程 NDJSON/JSON-RPC 与 NapCat 通信</description>
    <url>https://github.com/cindifind/NapCatJNI</url>

    <!-- ==================== 开源许可：与主仓库保持一致 ==================== -->
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <!-- ==================== 开发者信息 ==================== -->
    <developers>
        <developer>
            <id>cindifind</id>
            <name>CindiFind</name>
            <email>cindifind@users.noreply.github.com</email>
            <organization>CindiFind</organization>
            <organizationUrl>https://github.com/cindifind</organizationUrl>
        </developer>
    </developers>

    <!-- ==================== 源码仓库地址（Central 校验必填） ==================== -->
    <scm>
        <connection>scm:git:git://github.com/cindifind/NapCatJNI.git</connection>
        <developerConnection>scm:git:ssh://github.com:cindifind/NapCatJNI.git</developerConnection>
        <url>https://github.com/cindifind/NapCatJNI/tree/main/NapCatSDK</url>
        <tag>HEAD</tag>
    </scm>

    <!-- ==================== 全局属性 ==================== -->
    <properties>
        <!-- Java 8 字节码兼容，JDK 8 ~ JDK 26 均可作为运行时。
             编译时使用 JDK 11+，通过 release=8 参数确保仅调用 Java 8 API。 -->
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.release>8</maven.compiler.release>
        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 签名插件需要：禁止读取 gpg.executable / passphrase 默认值 -->
        <gpg.skip>false</gpg.skip>
    </properties>

    <!-- ==================== 依赖 ==================== -->
    <dependencies>
        <!-- jackson 三件套：手动指定每个模块版本（不再用统一属性管理）
             原因：jackson-annotations 的版本号方案与 core/databind 不同（无补丁号）
             CVE 修复：jackson-core 受影响 >=2.19.0 <2.21.1，2.22.1 满足修复要求
             - jackson-core:       2.22.1 (2026-07-08, 2.22 线最新)
             - jackson-databind:   2.22.1 (2026-07-08, 2.22 线最新)
             - jackson-annotations: 2.22  (2026-05-31, 2.22 线最新, 无补丁号) -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.22.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.22.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.22</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.18</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.18</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <!-- ==================== 构建配置 ==================== -->
    <build>
        <finalName>napcat-jni-sdk</finalName>
        <plugins>
            <!-- 显式指定编译器插件：使用 release=8 确保 Java 8 API 边界 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <!-- 基础 jar 插件：保留主类清单（可选，便于运行 Demo） -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.napcat.jni.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- ==== Maven Central 强制要求 1/4：源码 jar ==== -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- ==== Maven Central 强制要求 2/4：javadoc jar ==== -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <docencoding>UTF-8</docencoding>
                    <charset>UTF-8</charset>
                    <!-- 允许 JDK 17+ 下缺失 @param/@return 等警告不阻塞构建 -->
                    <additionalOptions>-Xdoclint:none</additionalOptions>
                    <failOnError>false</failOnError>
                    <failOnWarnings>false</failOnWarnings>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- ==== Maven Central 强制要求 3/4：GPG 签名 ==== -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.7</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- CI 环境从 serverId / 属性读取；不允许 gpg-agent 交互 -->
                    <gpgArguments>
                        <arg>--pinentry-mode</arg>
                        <arg>loopback</arg>
                        <arg>--batch</arg>
                        <arg>--yes</arg>
                    </gpgArguments>
                    <skip>${gpg.skip}</skip>
                </configuration>
            </plugin>

            <!-- ==== Maven Central 强制要求 4/4：通过新 Central Portal 直接发布 ==== -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.9.0</version>
                <extensions>true</extensions>
                <configuration>
                    <!-- 生成后自动发布到 Central（校验通过即出现在中央库） -->
                    <publishingType>AUTOMATIC</publishingType>
                    <!-- 跳过发布后状态轮询：Sonatype 后端新加了 warnings 字段，
                         旧版 DeploymentApiResponse 模型无法识别会导致反序列化失败。
                         上传+publish 请求成功后即视为构建通过，状态可在
                         https://central.sonatype.com/publishing/deployments 查看 -->
                    <waitUntilDeployed>false</waitUntilDeployed>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- ==================== Profile：构建 NapCat 运行时所需的 fat-jar ==================== -->
    <!-- 主仓库 build.bat / build.sh 激活：mvn -Pbridge package -->
    <profiles>
        <profile>
            <id>bridge</id>
            <build>
                <finalName>napcat-jni-bridge</finalName>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>3.6.0</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                                <configuration>
                                    <createDependencyReducedPom>false</createDependencyReducedPom>
                                    <transformers>
                                        <transformer
                                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                            <mainClass>com.napcat.jni.Main</mainClass>
                                        </transformer>
                                    </transformers>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- 跳过签名的本地开发 profile：mvn -Pdev package -->
        <profile>
            <id>dev</id>
            <properties>
                <gpg.skip>true</gpg.skip>
            </properties>
        </profile>
    </profiles>
</project>
